--- a/forgiveness.css
+++ b/forgiveness.css
@@ -1,16 +1,21 @@
-/**Importing fronts from Google*/
+/**Importing fonts from Google*/
 @import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Aclonica&family=Aladin&family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Allerta+Stencil&family=Almendra+Display&display=swap');
 
 /*Applies style to all elements*/
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Almendra Display Bold', serif, 
+    font-family: 'Almendra Display Bold', serif;
+}
+
+/*Ensure html and body take up full height*/
+html, body {
+    height: 100%;
 }
 
 /*Body styling*/
-body{
+body {
     background-image: url('Forgiveness-background.jpg');
     background-size: cover;
     background-position: center;
@@ -34,14 +39,14 @@ body{
 }
 
 /*Styling for header in container*/
-.quote-box h2{
+.quote-box h2 {
     font-size: 32px;
     margin-bottom: 40px;
     position: relative;
 }
 
-/*Styling psuedo-element after the header in the container*/
-.quote-box h2::after{
+/*Styling pseudo-element after the header in the container*/
+.quote-box h2::after {
     content: '';
     width: 75px;
     height: 3px;
@@ -54,46 +59,45 @@ body{
 }
 
 /*Styling for blockquote*/
-.quote-box blockquote{
+.quote-box blockquote {
     font-size: 26px;
     min-height: 110px;
 }
 
 /*Styling for pseudo-elements before and after blockquote*/
-.quote-box blockquote::before, .quote-box blockquote::after{
+.quote-box blockquote::before, .quote-box blockquote::after {
     content: '"';
 }
 
 /*Styling for pseudo-element before the span inside the container*/
-.quote-box span::before{
+.quote-box span::before {
     content: '';
     width: 20px;
     height: 2px;
-    background:#19599c;
+    background: #19599c;
     position: absolute;
     top: 50%;
     left: -30px;
 }
 
 /*Styling for the span inside the container*/
-.quote-box span{
+.quote-box span {
     display: block;
     margin-top: 10px;
     float: right;
     position: relative;
-
 }
 
 /*Styling for the div inside the container*/
-.quote-box div{
+.quote-box div {
     width: 100%;
     margin-top: 50px;
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 
 /*Styling for the button in container*/
-.quote-box button{
+.quote-box button {
     background: #f669c7;
     color: #fff;
     border-radius: 25px;
