--- a/success.css
+++ b/success.css
@@ -6,52 +6,36 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Emilys Candy', serif;
+    font-family: 'Princess Sofia', cursive;
 }
 
-/* Ensure html and body fill the viewport */
+/* Ensure the html and body elements fill the viewport */
 html, body {
     height: 100%;
 }
 
 /* Body styling */
 body {
-    background-image: url('Inspiration-background.jpg');
+    background-image: url('Success-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /* Styling for container */
 .quote-box {
     background: #fff;
     width: 700px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 40px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 
         0 20px 20px 10px rgba(0, 0, 0, 0.15),
         0 -20px 20px 10px rgba(0, 0, 0, 0.15);
-    position: relative;
-    overflow: hidden;
-}
-
-/* Styling for the home button */
-.home-button {
-    background: #f669c7;
-    color: #fff;
-    border: none;
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border-radius: 0 0 20px 0;
-    clip-path: polygon(0 0, 100% 0, 100% 100%);
-    cursor: pointer;
 }
 
 /* Styling for header in container */
@@ -71,7 +55,7 @@ body {
     position: absolute;
     bottom: -10px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%);
 }
 
 /* Styling for blockquote */
@@ -81,8 +65,7 @@ body {
 }
 
 /* Styling for pseudo-elements before and after blockquote */
-.quote-box blockquote::before,
-.quote-box blockquote::after {
+.quote-box blockquote::before, .quote-box blockquote::after {
     content: '"';
 }
 
@@ -115,10 +98,10 @@ body {
 
 /* Styling for the button in container */
 .quote-box button {
-    background: #415ed3;
-    color: #000000;
+    background: #000000;
+    color: #fff;
     border-radius: 25px;
-    border: 1px solid #69b7f6;
+    border: 1px solid #f669c7;
     width: 250px;
     height: 50px;
     display: flex;
@@ -126,8 +109,4 @@ body {
     justify-content: center;
     margin: 5px;
     cursor: pointer;
-}
-
-.quote-box button:hover {
-    background: #07bcea;
 }
