--- a/friendship.css
+++ b/friendship.css
@@ -115,7 +115,7 @@ body {
 
 /* Styling for the button in container */
 .quote-box button {
-    background: #415ed3;
+    background: #e66793;
     color: #000000;
     border-radius: 25px;
     border: 1px solid #69b7f6;
