--- a/success.css
+++ b/success.css
@@ -98,10 +98,10 @@ body {
 
 /* Styling for the button in container */
 .quote-box button {
-    background: #000000;
-    color: #fff;
+    background: #e66793;
+    color: #000000;
     border-radius: 25px;
-    border: 1px solid #f669c7;
+    border: 1px solid #69b7f6;
     width: 250px;
     height: 50px;
     display: flex;
@@ -109,4 +109,8 @@ body {
     justify-content: center;
     margin: 5px;
     cursor: pointer;
+}
+
+.quote-box button:hover {
+    background: #07bcea;
 }
